--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.4.0",
     "file-server": "^2.1.0",
     "mat-table-exporter": "^10.2.3",
+    "ngx-tableau": "^1.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "xlsx": "^0.17.0",
