--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/router": "~9.1.12",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "bootstrap": "^4.4.0",
+    "echarts": "^5.1.2",
     "file-server": "^2.1.0",
     "mat-table-exporter": "^10.2.3",
+    "ngx-echarts": "^7.0.1",
     "ngx-tableau": "^1.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -36,9 +38,10 @@
     "@angular-devkit/build-angular": "~0.901.12",
     "@angular/cli": "~9.1.12",
     "@angular/compiler-cli": "~9.1.12",
-    "@types/node": "^12.11.1",
+    "@juggle/resize-observer": "^3.3.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
