Added update api to tb info graph

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/forms": "~9.1.12",
     "@angular/localize": "~9.1.12",
     "@angular/material": "^9.2.4",
+    "@angular/material-moment-adapter": "^12.1.0",
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
@@ -27,6 +28,7 @@
     "echarts": "^5.1.2",
     "file-server": "^2.1.0",
     "mat-table-exporter": "^10.2.3",
+    "moment": "^2.29.1",
     "ngx-echarts": "^7.0.1",
     "ngx-tableau": "^1.1.1",
     "rxjs": "~6.5.4",
