--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "bootstrap": "^4.4.0",
     "echarts": "^5.1.2",
+    "express": "^4.17.1",
     "file-server": "^2.1.0",
     "mat-table-exporter": "^10.2.3",
     "moment": "^2.29.1",
@@ -34,7 +36,10 @@
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "xlsx": "^0.17.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "@angular/cli": "~9.1.12",
+    "@angular/compiler-cli": "~9.1.12",
+    "typescript": "~3.8.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.12",
@@ -61,5 +66,10 @@
     "fs": false,
     "os": false,
     "path": false
+  },
+  
+  "engines": {
+    "node": "14.15.0",
+    "npm": "6.14.8"
   }
 }
