--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@angular/animations": "~9.1.12",
     "@angular/cdk": "^9.2.4",
+    "@angular/cli": "~9.1.12",
     "@angular/common": "~9.1.12",
     "@angular/compiler": "~9.1.12",
+    "@angular/compiler-cli": "~9.1.12",
     "@angular/core": "~9.1.12",
     "@angular/forms": "~9.1.12",
     "@angular/localize": "~9.1.12",
@@ -31,15 +33,14 @@
     "file-server": "^2.1.0",
     "mat-table-exporter": "^10.2.3",
     "moment": "^2.29.1",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-echarts": "^7.0.1",
     "ngx-tableau": "^1.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "typescript": "~3.8.3",
     "xlsx": "^0.17.0",
-    "zone.js": "~0.10.2",
-    "@angular/cli": "~9.1.12",
-    "@angular/compiler-cli": "~9.1.12",
-    "typescript": "~3.8.3"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.12",
