--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "@progress/kendo-angular-conversational-ui": "^3.0.1",
     "bootstrap": "^4.4.0",
     "echarts": "^5.1.2",
     "express": "^4.17.1",
@@ -38,9 +39,15 @@
     "ngx-tableau": "^1.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "typescript": "~3.8.3",
     "xlsx": "^0.17.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "@progress/kendo-angular-buttons": "^6.0.0",
+    "@progress/kendo-angular-common": "^2.0.0",
+    "@progress/kendo-angular-intl": "^3.0.0",
+    "@progress/kendo-angular-l10n": "^3.0.0",
+    "@progress/kendo-angular-popup": "^4.0.0",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-theme-default": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.12",
@@ -61,7 +68,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "^3.8.3"
   },
   "browser": {
     "fs": false,
