before migrating to angular 13

--- a/package.json
+++ b/package.json
@@ -27,27 +27,28 @@
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "@progress/kendo-angular-buttons": "^6.0.0",
+    "@progress/kendo-angular-common": "^2.0.0",
     "@progress/kendo-angular-conversational-ui": "^3.0.1",
+    "@progress/kendo-angular-intl": "^3.0.0",
+    "@progress/kendo-angular-l10n": "^3.0.0",
+    "@progress/kendo-angular-popup": "^4.0.0",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-theme-default": "latest",
     "bootstrap": "^4.4.0",
     "echarts": "^5.1.2",
     "express": "^4.17.1",
     "file-server": "^2.1.0",
     "mat-table-exporter": "^10.2.3",
     "moment": "^2.29.1",
+    "ng2-charts": "^3.0.8",
     "ngx-bootstrap": "^6.2.0",
     "ngx-echarts": "^7.0.1",
     "ngx-tableau": "^1.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "xlsx": "^0.17.0",
-    "zone.js": "~0.10.2",
-    "@progress/kendo-angular-buttons": "^6.0.0",
-    "@progress/kendo-angular-common": "^2.0.0",
-    "@progress/kendo-angular-intl": "^3.0.0",
-    "@progress/kendo-angular-l10n": "^3.0.0",
-    "@progress/kendo-angular-popup": "^4.0.0",
-    "@progress/kendo-licensing": "^1.0.2",
-    "@progress/kendo-theme-default": "latest"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.12",
